--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    </resources>
+    <dimen name="primary_text_size">20sp</dimen>
+    <dimen name="secondary_text_size">12sp</dimen>
+
+    <dimen name="padding_list_item">12dp</dimen>
+
+</resources>
